methods.picture.PictureMono1.scala.error
Erreur de compilation :
PictureMono1:8: error: Unit does not take parameters
    peindre()
           ^PictureMono1:10: error: Unit does not take parameters
    peindre()
           ^PictureMono1:12: error: Unit does not take parameters
    peindre()
           ^